--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <section class="we-best" id="we-best">
                     <div class="container">
                         <h1 class="we-best__title">
-                            МЫ ЛУЧШИЕ
+                            Мы лучшие
                         </h1>
                         <ul class="advantages">
                             <li class="advantages__item">
