--- a/index.html
+++ b/index.html
@@ -644,6 +644,12 @@
                     </nav>
                 </div>
     </div>
+
+<script src="js/burger.js">
+
+</script>
+
+
 </body>
 
 </html>
