--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                                 <a href="#" class="nav-popup--link">Команда</a>
                             </li>
                             <li class="nav-popup--item">
-                                <a href="#" class="nav-popup--link">Меню</a>
+                                <a href="#menu" class="nav-popup--link">Меню</a>
                             </li>
                             <li class="nav-popup--item">
                                 <a href="#" class="nav-popup--link">Отзывы</a>
