--- a/index.html
+++ b/index.html
@@ -454,12 +454,14 @@
                                 Имя
 
                                 <input type="text" class="form__input" name="name" required>
+                                <div></div>
                             </label>
                             <label class="form__block form__block-title">
 
                                 Телефон
 
                                 <input type="text" class="form__input" name="phone" placeholder="89212264923" required>
+                                <div></div>
                             </label>
                         </div>
                         <div class="form__row">
@@ -508,6 +510,7 @@
                                 Комментарий
 
                                 <textarea class="form__textaria" name="comment"></textarea>
+                                <div></div>
                             </label>
                         </div>
 
