--- a/index.html
+++ b/index.html
@@ -688,6 +688,14 @@
                 <button class="cont__btn"></button>
             </div>
         </div>
+        <div class="order__popup">
+            <div class="order__popup__cont">
+                <span class="order__cont--title">Сообщение отправлено</span>
+                
+                <button class="order__cont--btn">Закрыть</button>
+            </div>
+        </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
