--- a/index.html
+++ b/index.html
@@ -756,12 +756,9 @@
         </div>
         <div class="reviews__popup">
             <div class="reviews__popup__cont">
-                <h2 class="cont__title">Константин Спилберг</h2>
+                <h2 class="cont__title"></h2>
                 <p class="cont__text">
-                    Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими
-                    мягкими, котлетка такой сочной, а сыр таким расплавленным. Мысли все о них и о них, о них и о них. Нельзя
-                    устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой
-                    сочной, а сыр таким расплавленным.
+                    
                 </p>
                 <button class="cont__btn"></button>
             </div>
