--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
             </div>
         </section>
         <div class="contacts" id="contacts">
-            <section class="map">
+            <section id="map" class="map">
 
             </section>
 
@@ -773,6 +773,9 @@
 
     </div>
 
+
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript">
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
     </script>
