--- a/index.html
+++ b/index.html
@@ -531,14 +531,14 @@
 
                                 Имя
 
-                                <input type="text" class="form__input" name="name" required>
+                                <input type="text" id="name" class="form__input" name="name" required>
                                 <div></div>
                             </label>
                             <label class="form__block form__block-title">
 
                                 Телефон
 
-                                <input type="text" class="form__input" name="phone" placeholder="89212264923" required>
+                                <input type="text" id="phone" class="form__input" name="phone" placeholder="89212264923" required>
                                 <div></div>
                             </label>
                         </div>
@@ -547,7 +547,7 @@
 
                                 Улица
 
-                                <input type="text" class="form__input" name="street">
+                                <input type="text" id="street" class="form__input" name="street">
                             </label>
                         </div>
 
